# ocaml-idna

./: .gitignore  DEVIATION_REGISTER.md  DIAGNOSTICS_ORDERING.md  DIAGNOSTICS_POLICY.md  DIAGNOSTICS_TEST_MATRIX.md  Makefile  NORMATIVE_HIERARCHY.md  NORMATIVE_TEST_MATRIX.md  README.md  SPEC_CONFORMANCE.md  TEST_EVIDENCE_AUDIT.md  dune-project  idna.opam
lib/: dune  idna.ml  idna.mli  idna_tables.ml  intranges.ml  punycode.ml  punycode.mli  utf8.ml  utf8.mli
lib/idna-tables-32/: dune  idna_tables.ml
lib/idna-tables-64/: dune  idna_tables.ml
lib/intranges-32/: dune  intranges.ml  intranges.mli
lib/intranges-64/: dune  intranges.ml  intranges.mli
test/: dune  test_contexto.ml  test_diagnostics.ml  test_generated.ml  test_generated_vectors.ml  test_helper.ml  test_helper.mli  test_idna.ml  test_idna_vectors.ml  test_lookup.ml  test_nfc.ml  test_punycode.ml  test_utf8.ml  test_uts46.ml
tools/: download_ucd.sh  gen_tables.py
